# mmath

./: LICENSE  README.md  config.py  main.py  operations.py  pyproject.toml  utils.py
src/mentalmath/: config.py  help_screen.py  main.py  operations.py
src/mentalmath/data/: data_screen.py
src/mentalmath/menus/: mainmenu.py  maxes_screen.py
src/mentalmath/questions/: question_screen.py  question_widgets.py
src/mentalmath/special/: powers.py  special_screen.py  times_tables.py
src/mentalmath/styles/: config_times_table_screen.tcss  endscreen.tcss  main.tcss  number_of_questions_screen.tcss  questionui.tcss
src/mmath/: config.py  help_screen.py  main.py  operations.py
src/mmath/data/: data_screen.py
src/mmath/menus/: mainmenu.py  maxes_screen.py  operation_selection.tcss
src/mmath/questions/: data_screen.py  operations.py  question_screen.py  question_widgets.py  questionui.tcss
src/mmath/special/: num_questions_screen.py  powers.py  special_screen.py  times_tables.py
src/mmath/styles/: config_times_table_screen.tcss  data_screen.tcss  help_screen.tcss  main.tcss  maxes_screen.tcss  number_of_questions_screen.tcss  questionui.tcss  special_screen.tcss
