[project]
name = "mmath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=6.6.0",
]

[project.scripts]
main = "mmath.main:main"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
