[project]
name = "mentalmath"
version = "0.1.7"
description = "A mental math training app."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
  { name = "Kian Broderick", email = "me@kianbroderick.com" },
]
dependencies = [
    "textual>=6.6.0",
]

[project.scripts]
mmath = "mentalmath.main:main"
mentalmath = "mentalmath.main:main"


[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
